--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ exclude: ['assets']
 # NOTE: Don't use @ in front of your Twitter username
 author:
   name: eden
-  email: 
-  uri: 
-  bio: 
+  email:
+  uri:
+  bio:
   twitter:
   github:
 
@@ -43,7 +43,7 @@ redcarpet:
 highlighter: rouge
 
 # Extending Jekyll
-gems:
+plugins:
   - jekyll-feed
   - jekyll-gist
   - jekyll-paginate
