--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Can be used in your theme by calling 'site.title' and so on
 title: Sponsor-xmas-advent
 description: Sponsor site for xmas advent
-url: http://xxxx
+url: https://hk01-digital.github.io/sponsor-xmas-advent
 
 # Used so Jekyll outputs the site correctly so Gulp can do what it wants
 source: .tmp/src
