--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sponsor-xmas-advent",
   "version": "0.0.0",
   "description": "Sponsor site for xmas advent",
-  "homepage": "http://xxxx",
+  "homepage": "https://hk01-digital.github.io/sponsor-xmas-advent",
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "babel-preset-es2015": "^6.9.0",
@@ -35,5 +35,6 @@
     "serve": "gulp",
     "serve:dist": "gulp --prod",
     "build": "gulp build --prod"
-  }
+  },
+  "browserslist": ["> 1%", "last 2 versions"]
 }
