--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "owl.carousel": "^2.2.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "bootstrap": "4.0.0-beta"
   }
 }
