--- a/src/_data/drawer.yml
+++ b/src/_data/drawer.yml
@@ -1,11 +1,11 @@
 - id: 1
-  door-img:
+  door-img: assets/images/drawer/door/door1.png
   title: 遊戲移植可能沒有你想像中容易
   desc: 「為甚麼我渴望已久的遊戲總是不在XX平台上推出呢？」這個問題可能比玩家想像中更複雜。
   img: assets/images/drawer/gift/test.jpg
 
 - id: 2
-  door-img:
+  door-img: assets/images/drawer/door/door2.png
   title: 遊戲移植可能沒有你想像中容易
   desc: 「為甚麼我渴望已久的遊戲總是不在XX平台上推出呢？」這個問題可能比玩家想像中更複雜。
   img: assets/images/drawer/gift/qr-code.jpg
