Feature/implement scene animation (#16)
* add csshake library

* fix building pipeline

* import scene 1 assets

* fix url path

* implement scene 1

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 # Can be used in your theme by calling 'site.title' and so on
 title: Sponsor-xmas-advent
 description: Sponsor site for xmas advent
-url: https://hk01-digital.github.io/sponsor-xmas-advent
+url: https://hk01-digital.github.io
+baseurl: sponsor-xmas-advent
 
 # Used so Jekyll outputs the site correctly so Gulp can do what it wants
 source: .tmp/src
