add missing js library (#17)

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "owl.carousel": "^2.2.1",
     "jquery": "^3.2.1",
     "bootstrap": "4.0.0-beta",
-    "csshake": "^1.5.2"
+    "csshake": "^1.5.2",
+    "Snap.svg": "snap.svg#^0.5.1"
   }
 }
