--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -10,7 +10,7 @@ publish_mode: editorial_workflow
 collections: # A list of collections the CMS should be able to edit
   - name: "scenes" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Scenes" # Used in the UI, ie.: "New Post"
-    folder: "src/_posts/scenes"
+    folder: "src/_scenes"
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
@@ -24,7 +24,7 @@ collections: # A list of collections the CMS should be able to edit
 
   - name: "drawer" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Drawer" # Used in the UI, ie.: "New Post"
-    folder: "src/_posts/drawer"
+    folder: "src/_drawer"
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
