--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: git-gateway
   repo: edenszetohk01/test-jekyll-netlify
   branch: development
+  accept_roles: admin
 
 media_folder: "src/assets/images"
 public_folder: "assets/images"
