--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^3.0.0",
     "require-dir": "^0.3.0",
     "shelljs": "^0.7.0",
     "yargs": "^4.7.0"
@@ -36,5 +36,8 @@
     "serve:dist": "gulp --prod",
     "build": "gulp build --prod"
   },
-  "browserslist": ["> 1%", "last 2 versions"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
